update images and fix its alignment

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -7,3 +7,11 @@
 	width: 100%;
 	height: 300px;
 }
+
+.auth-form {
+	width: 50%;
+
+	@media (max-width: 576px) {
+		width: 90%;
+	}
+}
